--- a/template.yaml
+++ b/template.yaml
@@ -142,7 +142,7 @@ Resources:
     Properties: 
       Action: lambda:InvokeFunction
       SourceArn: 
-        Fn::Sub: arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/*/GET/
+        Fn::Sub: arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/*/GET/*/*
       FunctionName: !Ref DynamicPage
       Principal: apigateway.amazonaws.com
 
