--- a/template.yaml
+++ b/template.yaml
@@ -13,7 +13,7 @@ Description: >
 
 Globals:
   Function:
-    Timeout: 5
+    Timeout: 10
     AutoPublishAlias: live
 
 Parameters:
@@ -74,6 +74,7 @@ Resources:
       CodeUri: src
       Handler: app.handler
       Runtime: nodejs14.x
+      MemorySize: 256
       DeploymentPreference:
         Type: !Ref Deployment
         Alarms:
