--- a/template.yaml
+++ b/template.yaml
@@ -7,6 +7,8 @@ Transform:
       apiKey: !Ref 'DDKEY'
       nodeLayerVersion: 59
       extensionLayerVersion: 9
+      env: !Ref EnvName
+      service: !Ref DynamicPage
       
 Description: >
   The tranmere web dynamic page stack
