--- a/template.yaml
+++ b/template.yaml
@@ -8,7 +8,7 @@ Transform:
       nodeLayerVersion: 59
       extensionLayerVersion: 9
       env: !Ref EnvName
-      service: !Ref DynamicPage.name
+      service: "DynamicPage"
       
 Description: >
   The tranmere web dynamic page stack
